[package]
edition = "2021"
name = "solana-multiplexer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
url = "2.2.2"
