[package]
edition = "2021"
name = "solana-multiplexer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "multiplexer"
path = "src/bin/multiplexer.rs"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.13.0"
bs58 = "0.4"
clap = {version = "3.1.7", features = ["derive"]}
futures-util = "0.3.21"
hyper = {version = "0.14.18", features = ["full"]}
hyper-tungstenite = "0.6.0"
lazy_static = "1.4.0"
prometheus = "0.13.0"
reqwest = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
tracing = "0.1"
tracing-subscriber = "0.3.10"
url = "2.2.2"
zstd = "0.11.1"
